# XSKHZ

./: Build.cmake  CMakeLists.txt  COPYRIGHT.md  Documentation.cmake  Doxyfile.in  INSTALL.md  Index.dox  MANUAL.md  README.md  TASKS.md  XSKHZ.key
Examples/: AnnualReport.sh  Icons.sh
Tests/: FileTreeMatch.cpp  TextAndBackAgain.cpp
ViFi/: Copyright.hpp.in  FileOpRunner.cpp  FileOpRunner.hpp  FileOpSequence.cpp  FileOpSequence.hpp  FileTree.cpp  FileTree.hpp  ReadText.cpp  ReadText.hpp  ScanDirectory.cpp  ScanDirectory.hpp  WriteText.cpp  WriteText.hpp  main.cpp  vifi.in
